VFPages-Part-2/src/objects/PurchaseOrderLineItems__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <label>PurchaseOrder</label>
        <referenceTo>PurchaseOrder__c</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PurchaseOrderLineItems</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PurchaseOrderLineItems Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseOrderLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>